x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

1.2.0
=====

Release date:

Fri, 19 Dec 2025 19:57:49 +0200

New features:

* Implement Chord Automation
  - Adds Column Settings with Chord Automation section

* Fix GitHub Issue #30: Implement MIDI side-chain feature

Bug fixes:

* Fix Send transport checkbox not initialized

Other:

* Improve audio I/O with a ring buffer

* Improve MIDI timing with direct function calls to worker

1.1.0
=====

Release date:

Wed, 03 Dec 2025 20:16:17 +0200

New features:

* Fix GitHub Issue #33: Implement sine modulation for MIDI CC automation

* Fix GitHub Issue #32: Implement virtual MIDI outs
  - Noteahead now opens "Noteahead Virtual MIDI OUT"
  - Tested with Surge XT that it actually works

* Take mute/solo into account when exporting as a MIDI file

* Introduce MidiExportDialog with start and end positions

1.0.0
=====

Release date:

Sat, 22 Nov 2025 13:50:42 +0200

New features:

* Fix GitHub Issue #13: Implement MIDI file export
  - Exports tempo track, note on/off, velocity

* Add percentage interpolation to velocity dialog

0.15.0
======

Release date:

Tue, 11 Nov 2025 19:07:20 +0200

New features:

* Fix GitHub Issue #29: Implement a pattern play order view
  - Play order is now displayed below the main tool bar
  - Clicking on a position will jump to the position

* Append soloed column names to the audio output filename

Bug fixes:

* Fix velocity interpolation on a selection not applied on all columns

* Fix incorrect values in the delay calculator dialog

Other:

* Take the lowest free track index when adding a new track

* Enable solo/mute during playback

0.14.1
======

Release date:

Sat, 18 Oct 2025 21:14:00 +0300

New features:

Bug fixes:

* Fix incorrect check for pattern validity

0.14.0
======

Release date:

Fri, 17 Oct 2025 20:11:55 +0300

New features:

* Add a virtual keyboard to the instrument settings

* Improve track focus highlights

* Implement help dialog for shortcuts
